@@ -1,3 +1,4 @@
+7/21/14 #69 reused Text nodes in BalanceScaleNode
 7/21/14 #69 handle highlighting correctly in BalanceScaleNode
 7/20/14 #70 add AACT to credits
 7/18/14 #80 expand touchArea for radio buttons in Introduction screen
